--- a/response.css
+++ b/response.css
@@ -14,6 +14,8 @@
     font-size: 10vw;
 }
 
+
+
 a {
     margin-left: 1vw;
     text-decoration: none;  
@@ -26,9 +28,16 @@ p {
     font-size: 1vw;
 }
 
+.container-fluid {
+    height: 40px;
+    margin-right: 50%;
+}
+
 ul.nav.navbar-nav{
-    width: 700px;
-    height: auto;
+    display: flex;
+    justify-content: center;
+    width: 800px;
+   
 }
         
 li {
@@ -66,37 +75,60 @@ a:hover, a:active, i {
     }
   }
 .header {
-    height: 10vw;
+    height:150px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     color: white;    
 }
 
-.firstName {
-    font-size: 10vw;
-    margin-left: 5%;
+.divLeft {
+    height: 100%;
+    width: 80%; 
+    justify-content: left;
+    display: flex;
+    padding-left: 1vw;
+}
+
+.pNameONe {
+    font-size: 5vw;
+    margin-left: 10%;
     text-align: center;
 }
 
 .divRigth {
-    height: 100%;
+    height: 200%;
     width: 25%;
     display: flex;
     justify-content: right;
     margin-right: 0;
 }
+@media only screen and (max-width: 750px) {
+    .divRigth {
+        display: none;
+        
+    }
+}
+
+
 
 .divRigth img {
-
+    display: flex;
     border-radius: 5px;
 }
 
+.img-fluid {
+    max-height: 100%;
+    width: auto;
+}
+
+
 .navbar navbar-inverse {
-    height: 40%;
+    height: 40px;
     width: 70%;
     background-color:rgba(75, 3, 75, 0.445);
 }
+
 
 .navbarOne {
     height: auto;
@@ -108,6 +140,7 @@ a:hover, a:active, i {
     justify-content: space-evenly;
     align-items: center;
     margin-left: 40%;
+    margin-right: 1%;
     margin-top: 6%;
     padding: 1%;
     border-radius: 5px;
@@ -152,12 +185,12 @@ a:hover, a:active, i {
 }
 
 .asideContact {
-    margin-left: 6%;
-    margin-right: 6%;
+    margin-left: 3%;
+    margin-right: 1%;
     margin-top: 12%;
-    padding: 15%;
+    padding: 12%;
     background-color: rgba(75, 3, 75, 0.658);
-    color: white;
+    color: whitesmoke;
     border-radius: 5px;
     font-size: 1vw;  
 }
@@ -167,7 +200,7 @@ a:hover, a:active, i {
 }
 
 .skills {
-    margin-right: 2%;
+    width: 100%;
     font-size: 1vw;
 }
 
@@ -178,12 +211,13 @@ a:hover, a:active, i {
 } */
 
 .mainRightOne {
-    width: 65%;
+    width: 68%;
     height: auto;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     margin-top: 4%;
-    margin-left: 5%;
+    margin-left: 8%;
     padding: 3%;
     border-radius: 5px;
     background-color: lightgray;
@@ -192,7 +226,7 @@ a:hover, a:active, i {
 }
 
 .mainRightTwo {
-    width: 65%;
+    width: 68%;
     height: auto;
     display: flex;
     flex-direction: column;
